tests/rosetta/out/Haskell/balanced-ternary.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/balanced-ternary.hs:187:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/balanced-ternary.hs:176:1
                 /workspace/mochi/tests/rosetta/out/Haskell/balanced-ternary.hs:187:1
    |
187 | main = do
    | ^^^^
